# sdl2-idkithinkimmakingagameihaveabsolutelynoidea

./: CMakeLists.txt  compile_commands.json  oldmain.cpp  run.sh
.cache/clangd/index/: Enemy.cpp.5AE57CC67E879BEB.idx  Enemy.cpp.8182094F866178CD.idx  Enemy.hpp.B48BCAF55C132103.idx  Enemy.hpp.B7492632326A31ED.idx  Entity.cpp.448FCE245A0B1250.idx  Entity.cpp.938CC5E7195E7C35.idx  Entity.hpp.415E07FC8909859F.idx  Entity.hpp.76EC9D28FDFBA032.idx  Player.cpp.5711B75A72990D25.idx  Player.cpp.F4874A0ED026D7E5.idx  Player.hpp.6FC4AFC8DBCD52CF.idx  Player.hpp.BB3CD896E2F6FF24.idx  Window.cpp.3BC3F1D157F8E584.idx  Window.cpp.8F1CB913CCACC406.idx  Window.hpp.3C15892C1C639069.idx  Window.hpp.CDD6CDF014270622.idx  collider.cpp.B6B37DD040019AE8.idx  collider.hpp.705D81809BB687FF.idx  main.cpp.7DD29126FDAD7ED0.idx
src/: main.cpp
src/Entity/: Entity.cpp  Entity.hpp
src/Entity/Enemy/: Enemy.cpp  Enemy.hpp
src/Entity/Player/: Player.cpp  Player.hpp
src/Utils/: collider.cpp  collider.hpp
src/Window/: Window.cpp  Window.hpp
